--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@css-render/vue3-ssr": "^0.15.12",
     "@vicons/antd": "^0.12.0",
+    "axios": "^1.7.9",
     "naive-ui": "^2.38.1",
     "pinia": "^2.1.7",
     "viewerjs": "^1.11.6",
@@ -23,4 +24,4 @@
     "eslint-plugin-vue": "^9.17.0",
     "vite": "^5.0.11"
   }
-} 
+}
