--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@css-render/vue3-ssr": "^0.15.12",
-    "@vicons/antd": "^0.12.0",
+    "@vicons/antd": "^0.13.0",
     "axios": "^1.7.9",
     "naive-ui": "^2.38.1",
+    "openseadragon": "^5.0.1",
     "pinia": "^2.1.7",
     "viewerjs": "^1.11.6",
     "vue": "^3.4.15",
